[package]
name = "long-poll-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.11"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
ulid = { version = "1", features = ["uuid"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
serde_json = "1"
axum-macros = "0.3.6"